Use Class#getConstructor()#newInstance instead of deprecated Class#newInstance()